testdata/baselines/reference/submodule/compiler/checkJsdocTypeTagOnExportAssignment1.errors.txt
a.js(7,12): error TS2304: Cannot find name 'Foo'.


==== a.js (1 errors) ====
    /**
     * @typedef {Object} Foo
     * @property {boolean} a
     * @property {boolean} b
     */
    
    /** @type {Foo} */
               ~~~
!!! error TS2304: Cannot find name 'Foo'.
    export default { c: false };
    
==== b.js (0 errors) ====
    import a from "./a";
    a;
    